Change database username and remove password
Updated database credentials for user service

--- a/user_service.yml
+++ b/user_service.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/user_service
-    username: postgres
-    password: 123
+    username: marvellousakinbola
+    password: 
     driver-class-name: org.postgresql.Driver
 
   jpa:
